--- a/example/src/main/res/layout/fragment_main.xml
+++ b/example/src/main/res/layout/fragment_main.xml
@@ -33,6 +33,17 @@
         app:layout_constraintVertical_bias="0.3"
         tools:listitem="@android:layout/simple_dropdown_item_1line" />
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/go_fragment_activity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="goToFragmentActivity"
+        android:textColor="#FF333333"
+        android:textSize="20sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
+
     <TextView
         android:id="@+id/stringTextView"
         android:layout_width="wrap_content"
